@@ -1,6 +1,7 @@
 # Changelog
 
 ## [unreleased]
+- Sprite Rotation
 - Add zoom slider in sprites tab
 
 ## [1.1.3]
